metadata/MindReader/objects/Meeting__c.object
<CustomObject>
    <description>Meeting Details</description>
    <fields>
        <fullName>Meeting_DateTime__c</fullName>
        <description>Meeting DateTime details</description>
        <label>Meeting DateTime</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Location__c</fullName>
        <description>Meeting Location details</description>
        <label>Meeting Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Subject__c</fullName>
        <description>Meeting Subject details</description>
        <label>Meeting Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Meeting</label>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>